--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jspm": "^0.16.53",
     "mariadb": "^2.0.3",
     "moment": "^2.24.0",
+    "multer": "^1.4.1",
     "tar": "^4.0.0",
     "underscore": "^1.9.1",
     "urldecode": "^1.0.1",
